# valkyrie_translator

./: .travis.yml  CMakeLists.txt  JointPositionGoalController.xml  JointStateController.xml  JointStatePublisher.xml  README.md  package.xml
config/: BothForearmControl.yaml  ForearmControl.yaml  HandControl.yaml  JointStateController.yaml  JointStatePublisher.yaml  LCM2ROSControl.yaml  LCM2ROSControl_UpperBody.yaml  LeftForearmControl.yaml  LeftHandControl.yaml  MIT_HandControl.yaml  NeckControl.yaml  RightForearmControl.yaml  RightHandControl.yaml  UoE_BothHandControl.yaml  UoE_LeftHandControl.yaml  UoE_RightHandControl.yaml  WholeBodyControl.yaml  freeze_config_hardware.yaml
include/: LCM2ROSControl.hpp
launch/: BothForearmControl.launch  ForearmControl.launch  GazeboPinnedLeftArmSim.launch  HandControl.launch  JointStateController.launch  JointStatePublisher.launch  LCM2ROSControl.launch  LCM2ROSControl_UpperBody.launch  LCM2ROSControl_UpperBody.yaml  LeftForearmControl.launch  MIT_HandControl.launch  NeckControl.launch  RightForearmControl.launch  RightHandControl.launch  UoE_BothHandControl.launch  UoE_LeftHandControl.launch  UoE_RightHandControl.launch  WholeBodyControl.launch  WorkbenchLeftHandControl.launch
scripts/: close-hand.py  open-hand.py  send-forearm-command.py  send-full-hand-command.py  send-hand-command.py  send-neck-command.py
src/: JointPositionGoalController.cpp  JointStateController.cpp  JointStatePublisher.cpp  LCM2ROSControl.cpp  LCM2ROSControl.hpp
